# meerkat

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  keyline-config.yaml  phase2.md  plan.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: release.yml
meerkat-api/: Cargo.toml
meerkat-api/src/: auth_context.rs  error.rs  lib.rs  middleware.rs  pagination.rs  resolved_organization.rs  search.rs  state.rs
meerkat-api/src/handlers/: health.hurl  health.rs  ingest.rs  issues.rs  members.rs  mod.rs  oidc.rs  oidc_admin.rs  organizations.hurl  organizations.rs  project_keys.hurl  project_keys.rs  projects.hurl  projects.rs  team.rs
meerkat-api/src/middleware/: auth.rs  key_auth.rs  mod.rs  subdomain.rs
meerkat-application/: Cargo.toml
meerkat-application/src/: auth_context.rs  context.rs  error.rs  events.rs  extensions.rs  lib.rs  mediator.rs  search.rs
meerkat-application/src/behaviors/: authorization.rs  mod.rs  rate_limit.rs  unit_of_work.rs
meerkat-application/src/events/: ingest.rs  mod.rs
meerkat-application/src/ingestion/: ingest.rs
meerkat-application/src/issues/: get.rs  ignore.rs  list.rs  list_events.rs  mod.rs  on_event_recorded.rs  reopen.rs  resolve.rs
meerkat-application/src/members/: get_current_user.rs  get_member_access.rs  list_member_projects.rs  list_members.rs  mod.rs
meerkat-application/src/organizations/: activate_oidc_config.rs  add_oidc_config.rs  create.rs  delete.rs  delete_oidc_config.rs  dismiss_oidc_config_warning.rs  get.rs  get_oidc_config.rs  list_oidc_config_warnings.rs  list_oidc_configs.rs  mod.rs  rename.rs  update_oidc_claim_mapping.rs
meerkat-application/src/ports/: audit.rs  clock.rs  error_observer.rs  event_read_store.rs  event_repository.rs  fingerprint_service.rs  issue_read_store.rs  issue_repository.rs  jwks_provider.rs  member_read_store.rs  member_repository.rs  mod.rs  oidc_config_read_store.rs  oidc_config_warning_store.rs  oidc_discovery_provider.rs  organization_read_store.rs  organization_repository.rs  organization_store.rs  project_key_read_store.rs  project_key_repository.rs  project_member_read_store.rs  project_member_repository.rs  project_permission_read_store.rs  project_read_store.rs  project_repository.rs  project_role_read_store.rs  project_role_repository.rs  project_store.rs  unit_of_work.rs
meerkat-application/src/project_keys/: create.rs  list.rs  mod.rs  on_project_created.rs  revoke.rs  update_rate_limit.rs
meerkat-application/src/projects/: assign_role_to_member.rs  create.rs  create_role.rs  delete.rs  delete_role.rs  get.rs  list.rs  list_members.rs  list_roles.rs  mod.rs  remove_role_from_member.rs  rename.rs  update_role.rs
meerkat-domain/: Cargo.toml
meerkat-domain/src/: lib.rs  organization.rs  testing.rs  version.rs
meerkat-domain/src/models/: event.rs  issue.rs  member.rs  mod.rs  oidc_config.rs  org_role.rs  organization.rs  permission.rs  project.rs  project_key.rs  project_member.rs  project_role.rs
meerkat-domain/src/ports/: clock.rs  health.rs  mod.rs
meerkat-domain/src/shared/: change_tracker.rs  mod.rs  url.rs
meerkat-infrastructure/: Cargo.toml
meerkat-infrastructure/src/: clock.rs  jwks.rs  lib.rs  oidc_discovery.rs  sha256_fingerprint_service.rs  tracing_audit_logger.rs  tracing_error_observer.rs
meerkat-infrastructure/src/persistence/: change_buffer.rs  error.rs  event_persistence.rs  issue_persistence.rs  mod.rs  organization_persistence.rs  pg_event_read_store.rs  pg_event_repository.rs  pg_issue_read_store.rs  pg_issue_repository.rs  pg_member_read_store.rs  pg_member_repository.rs  pg_oidc_config_read_store.rs  pg_oidc_config_warning_store.rs  pg_organization_read_store.rs  pg_organization_repository.rs  pg_organization_store.rs  pg_project_key_read_store.rs  pg_project_key_repository.rs  pg_project_member_read_store.rs  pg_project_member_repository.rs  pg_project_permission_read_store.rs  pg_project_read_store.rs  pg_project_repository.rs  pg_project_role_read_store.rs  pg_project_role_repository.rs  pg_project_store.rs  pg_unit_of_work.rs  pq_health_checker.rs  project_key_persistence.rs  project_member_persistence.rs  project_persistence.rs  project_role_persistence.rs
meerkat-macros/: Cargo.toml
meerkat-macros/src/: lib.rs
meerkat-server/: Cargo.toml
meerkat-server/migrations/: 20260330000001_create_organizations.sql  20260331000001_create_projects.sql  20260331000002_create_oidc_configs.sql  20260401000001_rename_jwks_url_to_discovery_url.sql  20260402000001_add_cascade_delete_to_org_fks.sql  20260402000002_add_claim_mapping_to_oidc_configs.sql  20260402000003_create_members.sql  20260402000004_create_project_roles.sql  20260402000005_create_project_members.sql  20260403000001_add_org_roles_to_members.sql  20260403000002_create_project_keys.sql  20260404000001_create_issues.sql  20260404000002_create_events.sql  20260404000003_add_rate_limit_to_project_keys.sql  20260405000001_add_issue_number.sql  20260405000002_add_last_seen_to_members.sql  20260405000003_create_oidc_config_warnings.sql  20260406000001_add_updated_at_to_project_roles.sql
meerkat-server/src/: bootstrap.rs  config.rs  main.rs
meerkat-server/tests/: hurl_integration.rs
meerkat-ui/: Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
meerkat-ui/src/: App.vue  main.ts  router.ts  style.css
meerkat-ui/src/composables/: useActivateOidcConfig.ts  useAddOidcConfig.ts  useAssignRole.ts  useAuth.ts  useCreateProject.ts  useCreateProjectKey.ts  useCreateProjectRole.ts  useCurrentProject.ts  useCurrentUser.ts  useDeleteOidcConfig.ts  useDeleteOrganization.ts  useDeleteProject.ts  useDeleteProjectRole.ts  useDismissOidcConfigWarning.ts  useIgnoreIssue.ts  useIssue.ts  useIssueAction.ts  useIssueEvents.ts  useIssues.ts  useMemberAccess.ts  useMembers.ts  useOidcConfig.ts  useOidcConfigWarnings.ts  useOidcConfigs.ts  useOrganization.ts  usePagination.ts  usePreferences.ts  useProject.ts  useProjectKeys.ts  useProjectMembers.ts  useProjectRoles.ts  useProjects.ts  useRemoveRole.ts  (+10 more)
(+73 files in other folders)
