[package]
name = "meerkat-api"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
meerkat-application = { path = "../meerkat-application" }
meerkat-domain = { path = "../meerkat-domain", features = ["openapi"] }
jsonwebtoken = "9"
serde_json = "1"
tracing = "0.1"
vec1 = { version = "1.12.1", features = ["serde"] }
