[package]
name = "meerkat-application"
edition.workspace = true
version.workspace = true

[features]
test-utils = ["parking_lot", "mockall", "meerkat-domain/test-utils"]

[dependencies]
meerkat-domain = { path = "../meerkat-domain" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
parking_lot = { version = "0.12", optional = true }
mockall = { version = "0.13", optional = true }
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockall = "0.13"
meerkat-domain = { path = "../meerkat-domain", features = ["test-utils"] }
