[package]
name = "meerkat-domain"
edition.workspace = true
version.workspace = true

[features]
test-utils = ["parking_lot"]
openapi = ["utoipa"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
meerkat-macros = { path = "../meerkat-macros" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
async-trait = "0.1"
parking_lot = { version = "0.12", optional = true }
strum = { version = "0.28.0", features = ["derive"] }
utoipa = { version = "5", optional = true }
vec1 = { version = "1.12.1", features = ["serde"] }

[dev-dependencies]
parking_lot = "0.12"
