[package]
name = "meerkat-domain"
edition.workspace = true
version.workspace = true

[features]
test-utils = []
openapi = ["utoipa"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
meerkat-macros = { path = "../meerkat-macros" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.9"
thiserror = "2"
async-trait = "0.1"
strum = { version = "0.28.0", features = ["derive"] }
utoipa = { version = "5", optional = true }
vec1 = { version = "1.12.1", features = ["serde"] }

[dev-dependencies]
