[package]
name = "meerkat-infrastructure"
edition.workspace = true
version.workspace = true

[dependencies]
meerkat-application = { path = "../meerkat-application" }
meerkat-domain = { path = "../meerkat-domain" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
