[package]
name = "meerkat-infrastructure"
edition.workspace = true
version.workspace = true

[dependencies]
meerkat-application = { path = "../meerkat-application" }
meerkat-domain = { path = "../meerkat-domain" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hex = "0.4"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time"] }
vec1 = { version = "1.12.1", features = ["serde"] }
raccoon-clock-rs = "0.1.1"
