[package]
name = "meerkat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
meerkat-api = { path = "../meerkat-api" }
meerkat-infrastructure = { path = "../meerkat-infrastructure" }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
